...
        </XStack>
      </YStack>
    </>
  )
}

const AlertDialog = (props: StudioAlertDialogProps) => {
  return (
    <>
      <DialogCloseButton />
      <YStack gap="$6" p="$2">
        <YStack gap="$2">
          <Dialog.Title size="$7">{props.title}</Dialog.Title>
...
